--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,20 +16,14 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="/">Search Analytics</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
+          <ul class="navbar-nav d-flex flex-row">
+            <li class="nav-item mr-2">
               <a class="nav-link" href="/">Home</a>
             </li>
-            <li class="nav-item">
-              <a id="analytics" class="nav-link" href="/analytics">Analytics</a>
+            <li class="nav-item ml-2">
+              <a class="nav-link" href="/analytics">Analytics</a>
             </li>
           </ul>
-        </div>
       </div>
     </nav>
 
